# final_work

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.docker/: Dockerfile  start.sh
app/: settings.py  urls.py
app/read_club/: admin.py
app/read_club/models/: book.py  event.py  note.py  subscribe.py
documents/: database_relation.puml
read_club/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  urls.py  views.py
read_club/management/commands/: database_seed.py
read_club/migrations/: 0001_initial.py  0002_alter_event_book_alter_note_event.py  0002_event_id_subscribe_id_alter_event_book_and_more.py  0003_review_is_approve.py
read_club/models/: __init__.py  book.py  event.py  note.py  review.py  subscribe.py
read_club/templates/: base.html  card_item.html  card_list.html  nav.html  review_list.html  table_list.html
read_club/templates/read_club/: book_detail.html  book_list.html  event_list.html  subscribe_detail.html  subscribe_list.html
