[tool.poetry]
name = "book-club"
version = "1.0.0"
description = ""
authors = ["Кузнецов Даниил <den@webpp.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"
psycopg = "^3.1.9"
psycopg2-binary = "^2.9.6"
pillow = "^9.5.0"
django-seed = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
